--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,35 @@
-# Logs
-logs
-*.log
+# Dependências (Nunca envie essa pasta, ela é pesada e gerada pelo npm install)
+node_modules/
+.pnp
+.pnp.js
+
+# Produção (Arquivos gerados pelo comando npm run build)
+dist/
+build/
+
+# Logs (Arquivos de erro gerados pelo sistema)
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+eslintcache
 
-node_modules
-dist
-dist-ssr
-*.local
+# Variáveis de Ambiente (Segredos, senhas e chaves de API)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+# Editores de Código (Configurações do seu VS Code ou IntelliJ)
+.vscode/
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Arquivos de Sistema (Arquivos inúteis criados pelo Windows ou Mac)
+.DS_Store
+Thumbs.db
+desktop.ini
